project_ws/log/build_2025-08-01_20-55-43/location_controller/stderr.log
  File "/home/pablo-pc/GITHUB/TFG/project_ws/install/location_controller/lib/python3.10/site-packages/location_controller/aux_func_temp.py", line 3
    from location_controller.utils import draw_registration_result,
                                                                   ^
SyntaxError: trailing comma not allowed without surrounding parentheses

